API: Add job type filter.